<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Magic: Deck Builder</string>

    <!--Card colors-->
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>

    <!--Card rarities-->
    <string name="rarity_common">Common</string>
    <string name="rarity_uncommon">Uncommon</string>
    <string name="rarity_rare">Rare</string>
    <string name="rarity_mythic">Mythic Rare</string>
    <string name="rarity_legendary">Legendary</string>

    <!--Card types-->
    <string name="type_enchantment">Enchantment</string>
    <string name="type_land">Land</string>
    <string name="type_creature">Creature</string>
    <string name="type_instant">Instant</string>
    <string name="type_artifact">Artifact</string>
    <string name="type_sorcery">Sorcery</string>
    <string name="type_summon">Summon</string>
    <string name="type_enchant">Enchant</string>
    <string name="type_player">Player</string>
    <string name="type_interrupt">Interrupt</string>
    <string name="type_tribal">Tribal</string>
    <string name="type_planeswalker">Planeswalker</string>
    <string name="type_plane">Plane</string>
    <string name="type_conspiracy">Conspiracy</string>
    <string name="type_scheme">Scheme</string>
    <string name="type_phenomenon">Phenomenon</string>

    <!--Card languages abbreviation. Do NOT translate.-->
    <string name="language_en">en</string>
    <string name="language_de">de</string>
    <string name="language_ko">ko</string>
    <string name="language_fr">fr</string>
    <string name="language_it">it</string>
    <string name="language_es">es</string>
    <string name="language_pt">pt</string>
    <string name="language_jp">jp</string>
    <string name="language_cn">cn</string>
    <string name="language_ru">ru</string>

    <!--Card languages. Do NOT translate.-->
    <string name="settings_language_en">English</string>
    <string name="settings_language_de">Deutsch</string>
    <string name="settings_language_ko">한국어</string>
    <string name="settings_language_fr">Français</string>
    <string name="settings_language_it">Italiano</string>
    <string name="settings_language_es">Español</string>
    <string name="settings_language_pt">Português</string>
    <string name="settings_language_jp">日本語</string>
    <string name="settings_language_cn">中文</string>
    <string name="settings_language_ru">Pусский</string>

    <!--Home screen / DiscoverActivity labels-->
    <string name="discover_new">New</string>
    <string name="discover_recommended">Recommended</string>
    <string name="discover_colors">Colors</string>
    <string name="discover_rarity">Rarity</string>
    <string name="discover_types">Types</string>
    <string name="discover_subtypes">Subtypes</string>
    <string name="discover_sets">Sets</string>

    <!--Home screen / DiscoverActivity content descriptions-->
    <string name="group_cd">Browse <xliff:g id="cardGrouping">%1$s</xliff:g> cards.</string>
    <string name="card_name_cd">The Magic card, <xliff:g id="cardName">%1$s</xliff:g>.</string>

    <!--DiscoverActivity menu items-->
    <string name="search">Search</string>
    <string name="view_saved_searches">Starred Searches</string>

    <!--DetailCardViewActivity labels-->
    <string name="tab_editions">Editions</string>
    <string name="tab_similar">Similar</string>
    <string name="tab_recommended">Recommended</string>
    <string name="tab_decks">Decks</string>

    <!--Search dialog field-->
    <string name="tags">Tags</string>
    <string name="tags_hint">Search&#8230;(e.g. planeswalker, goblin, etc.)</string>
    <string name="save_search_btn">Save Search</string>

    <!--Settings fields-->
    <string name="settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_key">language</string>

    <string name="api_base_url">http://magicapp.herokuapp.com</string>
</resources>
