<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_new_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_recommended" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_recommended_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_colors" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_colors_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_rarity" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_rarity_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_types" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_types_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_subtypes" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_subtypes_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/discover_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_sets" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_sets_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>